--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -66,7 +66,8 @@
   },
   "resolutions": {
     "@types/react": "16.4.17",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "serialize-javascript": "^2.1.1"
   },
   "babel": {
     "presets": [
